--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "helmet": "^6.1.5",
     "mongoose": "^7.0.4"
   },
   "keywords": []
