--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@
     "node": true,
     "commonjs": true,
     "es2021": true,
-    "es6": true,
+    "es6": true
   },
   "extends": "airbnb-base",
   "overrides": [],
