--- a/package.json
+++ b/package.json
@@ -25,10 +25,15 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.1.5",
-    "mongoose": "^7.0.4"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.4",
+    "validator": "^13.9.0"
   },
   "keywords": []
 }
